fix text-align p

--- a/css/products.css
+++ b/css/products.css
@@ -11,6 +11,10 @@
     background-size: cover;
 }
 
+p {
+    text-align: justify;
+}
+
 #textiles h1,
 #apparels h1,
 #medical h1,
